--- a/bin/node/cli/Cargo.toml
+++ b/bin/node/cli/Cargo.toml
@@ -35,34 +35,34 @@ structopt = "0.3.3"
 serde_json = "1.0.41"
 
 # primitives
-authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/ProChain/substrate.git"}
-babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/ProChain/substrate.git" }
-grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/ProChain/substrate.git" }
-primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
-sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
+authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
+babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
+grandpa_primitives = { package = "sp-finality-granpda", git = "https://github.com/ProChain/substrate.git" }
+primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
 sp-timestamp = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-
-# core dependencies
 sp-finality-tracker = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-inherents = { package = "substrate-inherents", git = "https://github.com/ProChain/substrate.git" }
-keyring = { package = "substrate-keyring", git = "https://github.com/ProChain/substrate.git" }
-runtime-io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git" }
+inherents = { package = "sp-inherents", git = "https://github.com/ProChain/substrate.git" }
+keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git" }
+runtime-io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git" }
 
 # client dependencies
-client-api = { package = "substrate-client-api", git = "https://github.com/ProChain/substrate.git" }
-client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
-chain-spec = { package = "substrate-chain-spec", git = "https://github.com/ProChain/substrate.git" }
-transaction_pool = { package = "sc-transaction-pool", git = "https://github.com/ProChain/substrate.git" }
-network = { package = "substrate-network", git = "https://github.com/ProChain/substrate.git" }
-babe = { package = "substrate-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-client_db = { package = "substrate-client-db", git = "https://github.com/ProChain/substrate.git", default-features = false }
-offchain = { package = "substrate-offchain", git = "https://github.com/ProChain/substrate.git" }
-substrate-rpc = { package = "substrate-rpc", git = "https://github.com/ProChain/substrate.git" }
-substrate-basic-authorship = { git = "https://github.com/ProChain/substrate.git" }
-substrate-service = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/ProChain/substrate.git" }
-authority-discovery = { package = "substrate-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
+client-api = { package = "sc-client-api", git = "https://github.com/ProChain/substrate.git" }
+client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
+chain-spec = { package = "sc-chain-spec", git = "https://github.com/ProChain/substrate.git" }
+txpool = { package = "sc-transaction-pool", git = "https://github.com/ProChain/substrate.git" }
+txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/ProChain/substrate.git" }
+network = { package = "sc-network", git = "https://github.com/ProChain/substrate.git" }
+babe = { package = "sc-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
+grandpa = { package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
+client_db = { package = "sc-client-db", git = "https://github.com/ProChain/substrate.git", default-features = false }
+offchain = { package = "sc-offchain", git = "https://github.com/ProChain/substrate.git" }
+sc-rpc = { package = "sc-rpc", git = "https://github.com/ProChain/substrate.git" }
+sc-basic-authority = { git = "https://github.com/ProChain/substrate.git" }
+sc-service = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+sc-telemetry = { package = "sc-telemetry", git = "https://github.com/ProChain/substrate.git" }
+authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
+consensus-common = { package = "sp-consensus", git = "https://github.com/ProChain/substrate.git"}
 
 # frame dependencies
 indices = { package = "pallet-indices", git = "https://github.com/ProChain/substrate.git" }
@@ -83,7 +83,7 @@ node-executor = { path = "../executor" }
 
 # CLI-specific dependencies
 tokio = { version = "0.1.22", optional = true }
-substrate-cli = { git = "https://github.com/ProChain/substrate.git", optional = true }
+sc-cli = { git = "https://github.com/ProChain/substrate.git", optional = true }
 transaction-factory = { path = "../../../test/utils/transaction-factory", optional = true }
 ctrlc = { version = "3.1.3", features = ["termination"], optional = true }
 
@@ -95,19 +95,18 @@ console_log = { version = "0.1.2", optional = true }
 js-sys = { version = "0.3.22", optional = true }
 wasm-bindgen = { version = "0.2.45", optional = true }
 wasm-bindgen-futures = { version = "0.3.22", optional = true }
-kvdb-memorydb = { git = "https://github.com/paritytech/parity-common", rev="03a2ba08f47f4af4219280e660a1ea92cb8896bd", optional = true }
+kvdb-memorydb = { version = "0.1.1", optional = true }
 rand6 = { package = "rand", version = "0.6", features = ["wasm-bindgen"], optional = true }	# Imported just for the `wasm-bindgen` feature
 
 [dev-dependencies]
-keystore = { package = "substrate-keystore", git = "https://github.com/ProChain/substrate.git" }
-babe = { package = "substrate-consensus-babe", git = "https://github.com/ProChain/substrate.git", features = ["test-helpers"] }
-consensus-common = { package = "substrate-consensus-common", git = "https://github.com/ProChain/substrate.git" }
-service-test = { package = "substrate-service-test", git = "https://github.com/ProChain/substrate.git" }
+keystore = { package = "sc-keystore", git = "https://github.com/ProChain/substrate.git" }
+babe = { package = "sc-consensus-babe", git = "https://github.com/ProChain/substrate.git", features = ["test-helpers"] }
+service-test = { package = "sc-service-test", git = "https://github.com/ProChain/substrate.git" }
 futures = "0.3.1"
 tempfile = "3.1.0"
 
 [build-dependencies]
-substrate-cli = { package = "substrate-cli", git = "https://github.com/ProChain/substrate.git" }
+sc-cli = { package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
 build-script-utils = { package = "substrate-build-script-utils", path = "../../../utils/build-script-utils" }
 structopt = "0.3.3"
 vergen = "3.0.4"
@@ -127,16 +126,16 @@ browser = [
 	"rand6"
 ]
 cli = [
-	"substrate-cli",
+	"sc-cli",
 	"transaction-factory",
 	"tokio",
 	"ctrlc",
-	"substrate-service/rocksdb",
+	"sc-service/rocksdb",
 	"node-executor/wasmi-errno",
 ]
 wasmtime = [
 	"cli",
 	"node-executor/wasmtime",
-	"substrate-cli/wasmtime",
-	"substrate-service/wasmtime",
+	"sc-cli/wasmtime",
+	"sc-service/wasmtime",
 ]
