--- a/bin/node/modules/did/Cargo.toml
+++ b/bin/node/modules/did/Cargo.toml
@@ -13,20 +13,19 @@ integer-sqrt = { version = "0.1.2" }
 safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0.102", optional = true }
-#harsh = { path = "../../harsh", default-features = false }
 
 # primitives
 node-primitives = { path = "../../primitives", default-features = false }
-primitives = { package = "substrate-primitives",  git = "https://github.com/ProChain/substrate.git", default-features = false }
-rstd = { package = "sr-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
-sr-primitives = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+primitives = { package = "sp-core",  git = "https://github.com/ProChain/substrate.git", default-features = false }
+rstd = { package = "sp-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-runtime = { git = "https://github.com/ProChain/substrate.git", default-features = false }
 
 # frame dependencies
 balances = { package = "pallet-balances", git = "https://github.com/ProChain/substrate.git", default-features = false }
 support = { package = "frame-support", git = "https://github.com/ProChain/substrate.git", default-features = false }
 system = { package = "frame-system", git = "https://github.com/ProChain/substrate.git", default-features = false }
 timestamp = { package = "pallet-timestamp", git = "https://github.com/ProChain/substrate.git", default-features = false }
-runtime-io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git", default-features = false }
+runtime-io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git", default-features = false }
 
 [dev-dependencies]
 
@@ -40,7 +39,7 @@ std = [
 	"rstd/std",
 	"rustc-hex",
 	"serde",
-	"sr-primitives/std",
+	"sp-runtime/std",
 	"support/std",
 	"system/std",
 	"timestamp/std",
