--- a/bin/node/rpc/Cargo.toml
+++ b/bin/node/rpc/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
+client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
 jsonrpc-core = "14.0.3"
 node-primitives = { path = "../primitives" }
 node-runtime = { path = "../runtime" }
-sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
 pallet-contracts-rpc = { git = "https://github.com/ProChain/substrate.git" }
 pallet-transaction-payment-rpc = { git = "https://github.com/ProChain/substrate.git" }
 substrate-frame-rpc-system = { path = "../../../utils/frame/rpc/system" }
-transaction_pool = { package = "sc-transaction-pool", git = "https://github.com/ProChain/substrate.git" }
+txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/ProChain/substrate.git" }
