--- a/bin/node/testing/Cargo.toml
+++ b/bin/node/testing/Cargo.toml
@@ -7,22 +7,22 @@ edition = "2018"
 
 [dependencies]
 balances = { package = "pallet-balances", git = "https://github.com/ProChain/substrate.git" }
-client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
+client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
 codec = { package = "parity-scale-codec", version = "1.0.0" }
 contracts = { package = "pallet-contracts", git = "https://github.com/ProChain/substrate.git" }
 grandpa = { package = "pallet-grandpa", git = "https://github.com/ProChain/substrate.git" }
 indices = { package = "pallet-indices", git = "https://github.com/ProChain/substrate.git" }
-keyring = { package = "substrate-keyring", git = "https://github.com/ProChain/substrate.git" }
+keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git" }
 node-executor = { path = "../executor" }
 node-primitives = { path = "../primitives" }
 node-runtime = { path = "../runtime" }
-primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
-runtime-io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git" }
+primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
+runtime-io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git" }
 runtime_support = { package = "frame-support", git = "https://github.com/ProChain/substrate.git" }
 session = { package = "pallet-session", git = "https://github.com/ProChain/substrate.git" }
-sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
 staking = { package = "pallet-staking", git = "https://github.com/ProChain/substrate.git" }
-substrate-executor = { git = "https://github.com/ProChain/substrate.git" }
+sc-executor = { git = "https://github.com/ProChain/substrate.git" }
 system = { package = "frame-system", git = "https://github.com/ProChain/substrate.git" }
 test-client = { package = "substrate-test-client", path = "../../../test/utils/client" }
 timestamp = { package = "pallet-timestamp", git = "https://github.com/ProChain/substrate.git" }
