--- a/docs/CODEOWNERS
+++ b/docs/CODEOWNERS
@@ -20,7 +20,7 @@
 
 # Wasm execution and the wasm side of Substrate Runtime Interface
 /client/executor/ @pepyakin
-/primitives/sr-io/ @pepyakin
+/primitives/sp-io/ @pepyakin
 
 # Sandboxing capability of Substrate Runtime
 /primitives/sr-sandbox/ @pepyakin
@@ -61,7 +61,7 @@
 /bin/node/executor/ @kianenigma
 
 # Transaction weight stuff
-/primitives/sr-primitives/src/weights.rs @kianenigma
+/primitives/sp-runtime/src/weights.rs @kianenigma
 
 # Support crates
 /frame/support/ @thiolliere @kianenigma
