--- a/test/utils/chain-spec-builder/Cargo.toml
+++ b/test/utils/chain-spec-builder/Cargo.toml
@@ -7,8 +7,8 @@ build = "build.rs"
 
 [dependencies]
 ansi_term = "0.12.1"
-keystore = { package = "substrate-keystore", git = "https://github.com/ProChain/substrate.git" }
+keystore = { package = "sc-keystore", git = "https://github.com/ProChain/substrate.git" }
 node-cli = { path = "../../../bin/node/cli" }
-primitives = { package = "substrate-primitives",  git = "https://github.com/ProChain/substrate.git" }
+primitives = { package = "sc-keystore",  git = "https://github.com/ProChain/substrate.git" }
 rand = "0.7.2"
 structopt = "0.3.3"
