--- a/test/utils/client/Cargo.toml
+++ b/test/utils/client/Cargo.toml
@@ -5,16 +5,16 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-client-api = { package = "substrate-client-api", git = "https://github.com/ProChain/substrate.git" }
-client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
-client-db = { package = "substrate-client-db", git = "https://github.com/ProChain/substrate.git", features = ["test-helpers"] }
-consensus = { package = "substrate-consensus-common", git = "https://github.com/ProChain/substrate.git" }
-executor = { package = "substrate-executor", git = "https://github.com/ProChain/substrate.git" }
+client-api = { package = "sc-client-api", git = "https://github.com/ProChain/substrate.git" }
+client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
+client-db = { package = "sc-client-db", git = "https://github.com/ProChain/substrate.git", features = ["test-helpers"] }
+consensus = { package = "sp-consensus", git = "https://github.com/ProChain/substrate.git" }
+executor = { package = "sc-executor", git = "https://github.com/ProChain/substrate.git" }
 futures = "0.3.1"
 hash-db = "0.15.2"
-keyring = { package = "substrate-keyring", git = "https://github.com/ProChain/substrate.git" }
+keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git" }
 codec = { package = "parity-scale-codec", version = "1.0.0" }
-primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
-sr-primitives = {  git = "https://github.com/ProChain/substrate.git" }
+primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = {  git = "https://github.com/ProChain/substrate.git" }
 sp-blockchain = { git = "https://github.com/ProChain/substrate.git" }
-state_machine = { package = "substrate-state-machine", git = "https://github.com/ProChain/substrate.git" }
+state_machine = { package = "sp-state-machine", git = "https://github.com/ProChain/substrate.git" }
