--- a/test/utils/runtime/Cargo.toml
+++ b/test/utils/runtime/Cargo.toml
@@ -6,41 +6,41 @@ edition = "2018"
 build = "build.rs"
 
 [dependencies]
-app-crypto = { package = "substrate-application-crypto", git = "https://github.com/ProChain/substrate.git", default-features = false }
-aura-primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
-babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
-block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
+app-crypto = { package = "sc-application-crypto", git = "https://github.com/ProChain/substrate.git", default-features = false }
+aura-primitives = { package = "sp-consensus-aura", git = "https://github.com/ProChain/substrate.git", default-features = false }
+babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/ProChain/substrate.git", default-features = false }
+block-builder-api = { package = "sp-block-builder", git = "https://github.com/ProChain/substrate.git", default-features = false }
 cfg-if = "0.1.10"
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
 executive = { package = "frame-executive", git = "https://github.com/ProChain/substrate.git", default-features = false }
-inherents = { package = "substrate-inherents", git = "https://github.com/ProChain/substrate.git", default-features = false }
-keyring = { package = "substrate-keyring", git = "https://github.com/ProChain/substrate.git", optional = true }
+inherents = { package = "sp-inherents", git = "https://github.com/ProChain/substrate.git", default-features = false }
+keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git", optional = true }
 log = { version = "0.4.8", optional = true }
 memory-db = { version = "0.15.2", default-features = false }
-offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false}
-primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
-rstd = { package = "sr-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
-runtime-interface = { package = "substrate-runtime-interface", git = "https://github.com/ProChain/substrate.git", default-features = false}
-runtime_io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git", default-features = false }
+offchain-primitives = { package = "sp-offchain", git = "https://github.com/ProChain/substrate.git", default-features = false}
+primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git", default-features = false }
+rstd = { package = "sp-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
+runtime-interface = { package = "sp-runtime-interface", git = "https://github.com/ProChain/substrate.git", default-features = false}
+runtime_io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git", default-features = false }
 runtime_support = { package = "frame-support", git = "https://github.com/ProChain/substrate.git", default-features = false }
-runtime_version = { package = "sr-version", git = "https://github.com/ProChain/substrate.git", default-features = false }
+runtime_version = { package = "sp-version", git = "https://github.com/ProChain/substrate.git", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
-session = { package = "substrate-session", git = "https://github.com/ProChain/substrate.git", default-features = false }
-sr-api = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-sr-primitives = {  git = "https://github.com/ProChain/substrate.git", default-features = false }
+session = { package = "sp-sesssion", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-api = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-runtime = {  git = "https://github.com/ProChain/substrate.git", default-features = false }
 pallet-babe = { git = "https://github.com/ProChain/substrate.git", default-features = false }
 frame-system = { git = "https://github.com/ProChain/substrate.git", default-features = false }
 frame-system-rpc-runtime-api = { git = "https://github.com/ProChain/substrate.git", default-features = false }
 pallet-timestamp = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-substrate-client = { git = "https://github.com/ProChain/substrate.git", optional = true }
-substrate-trie = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-transaction-pool-api = { package = "substrate-transaction-pool-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
-trie-db = { version = "0.15.2", default-features = false }
+sc-client = { git = "https://github.com/ProChain/substrate.git", optional = true }
+sp-trie = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+txpool-runtime-api = { package = "sp-transaction-pool-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
+trie-db = { version = "0.16.0", default-features = false }
 
 [dev-dependencies]
-substrate-executor = { git = "https://github.com/ProChain/substrate.git" }
+sc-executor = { git = "https://github.com/ProChain/substrate.git" }
 substrate-test-runtime-client = { path = "./client" }
-state_machine = { package = "substrate-state-machine", git = "https://github.com/ProChain/substrate.git" }
+state_machine = { package = "sp-state-machine", git = "https://github.com/ProChain/substrate.git" }
 
 [build-dependencies]
 wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }
@@ -70,14 +70,14 @@ std = [
 	"runtime_version/std",
 	"serde",
 	"session/std",
-	"sr-api/std",
-	"sr-primitives/std",
+	"sp-api/std",
+	"sp-runtime/std",
 	"pallet-babe/std",
 	"frame-system-rpc-runtime-api/std",
 	"frame-system/std",
 	"pallet-timestamp/std",
-	"substrate-client",
-	"substrate-trie/std",
-	"transaction-pool-api/std",
+	"sc-client",
+	"sp-trie/std",
+	"txpool-runtime-api/std",
 	"trie-db/std",
 ]
