--- a/test/utils/runtime/client/Cargo.toml
+++ b/test/utils/runtime/client/Cargo.toml
@@ -5,12 +5,13 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-block-builder = { package = "substrate-block-builder", git = "https://github.com/ProChain/substrate.git" }
+block-builder = { package = "sc-block-builder", git = "https://github.com/ProChain/substrate.git" }
 generic-test-client = { package = "substrate-test-client", git = "https://github.com/ProChain/substrate.git" }
-primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
+primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
 runtime = { package = "substrate-test-runtime", path = "../../runtime" }
-sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
 sp-blockchain = { git = "https://github.com/ProChain/substrate.git" }
 codec = { package = "parity-scale-codec", version = "1.0.0" }
-client-api = { package = "substrate-client-api", git = "https://github.com/ProChain/substrate.git" }
-client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
+client-api = { package = "sc-client-api", git = "https://github.com/ProChain/substrate.git" }
+client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
+futures = "0.3.1"
