--- a/bin/node/cli/Cargo.toml
+++ b/bin/node/cli/Cargo.toml
@@ -33,6 +33,7 @@ log = "0.4.8"
 rand = "0.7.2"
 structopt = "0.3.3"
 serde_json = "1.0.41"
+hex = "0.4.0"
 
 # primitives
 authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
