--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -13,6 +13,7 @@ safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0.103", features = ["derive"], optional = true }
 simple-json = { version = '0.1.1', git = "https://github.com/jingleizhang/simple-json.git", default-features = false }
+hex = { version = "0.4.0", default-features = false }
 
 # primitives
 authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/ProChain/substrate.git", default-features = false }
