--- a/bin/node/cli/Cargo.toml
+++ b/bin/node/cli/Cargo.toml
@@ -24,7 +24,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 # third-party dependencies
 codec = { package = "parity-scale-codec", version = "1.0.6" }
-serde = { version = "1.0.102", features = [ "derive" ] }
+serde = { version = "1.0.102", features = ["derive"] }
 futures01 = { package = "futures", version = "0.1.29" }
 futures = { version = "0.3.1", features = ["compat"] }
 hex-literal = "0.2.1"
@@ -38,7 +38,7 @@ hex = "0.4.0"
 # primitives
 authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
 babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
-grandpa_primitives = { package = "sp-finality-granpda", git = "https://github.com/ProChain/substrate.git" }
+grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
 primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
 sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
 sp-timestamp = { git = "https://github.com/ProChain/substrate.git", default-features = false }
@@ -46,6 +46,7 @@ sp-finality-tracker = { git = "https://github.com/ProChain/substrate.git", defau
 inherents = { package = "sp-inherents", git = "https://github.com/ProChain/substrate.git" }
 keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git" }
 runtime-io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git" }
+consensus-common = { package = "sp-consensus", git = "https://github.com/ProChain/substrate.git"}
 
 # client dependencies
 client-api = { package = "sc-client-api", git = "https://github.com/ProChain/substrate.git" }
@@ -56,14 +57,13 @@ txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/Pr
 network = { package = "sc-network", git = "https://github.com/ProChain/substrate.git" }
 babe = { package = "sc-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
 grandpa = { package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-client_db = { package = "sc-client-db", git = "https://github.com/ProChain/substrate.git", default-features = false }
+client-db = { package = "sc-client-db", git = "https://github.com/ProChain/substrate.git", default-features = false }
 offchain = { package = "sc-offchain", git = "https://github.com/ProChain/substrate.git" }
-sc-rpc = { package = "sc-rpc", git = "https://github.com/ProChain/substrate.git" }
+sc-rpc = { git = "https://github.com/ProChain/substrate.git" }
 sc-basic-authority = { git = "https://github.com/ProChain/substrate.git" }
 sc-service = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-sc-telemetry = { package = "sc-telemetry", git = "https://github.com/ProChain/substrate.git" }
+sc-telemetry = { git = "https://github.com/ProChain/substrate.git" }
 authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
-consensus-common = { package = "sp-consensus", git = "https://github.com/ProChain/substrate.git"}
 
 # frame dependencies
 indices = { package = "pallet-indices", git = "https://github.com/ProChain/substrate.git" }
