--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -27,8 +27,8 @@ sp-api = { git = "https://github.com/ProChain/substrate.git", default-features =
 sp-runtime = { git = "https://github.com/ProChain/substrate.git", default-features = false }
 sp-staking = { git = "https://github.com/ProChain/substrate.git", default-features = false }
 sp-keyring = { git = "https://github.com/ProChain/substrate.git", optional = true }
-sp-sesssion = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-txpool-runtime-api = { package = "sp-transaction-pool-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-session = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-transaction-pool = { package = "sp-transaction-pool-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
 version = { package = "sp-version", git = "https://github.com/ProChain/substrate.git", default-features = false }
 
 # frame dependencies
@@ -115,7 +115,7 @@ std = [
 	"sp-staking/std",
 	"staking/std",
 	"sp-keyring",
-	"sp-sesssion/std",
+	"sp-session/std",
 	"sudo/std",
 	"support/std",
 	"system-rpc-runtime-api/std",
@@ -124,7 +124,7 @@ std = [
 	"transaction-payment-rpc-runtime-api/std",
 	"transaction-payment/std",
 	"treasury/std",
-	"txpool-runtime-api/std",
+	"sp-transaction-pool/std",
 	"utility/std",
 	"version/std",
 	"did/std",
