htlc supports did; bug fix

--- a/eth-erc20-swap/calculate-ids/package.json
+++ b/eth-erc20-swap/calculate-ids/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "calculate-ids",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "get-json": "^1.0.1",
-    "hex": "^0.1.0",
-    "json": "^9.0.6",
-    "request": "^2.88.0",
-    "sha": "^3.0.0",
-    "sha3": "^2.0.7",
-    "web3": "^1.2.4"
-  }
+	"name": "calculate-ids",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"get-json": "^1.0.1",
+		"hex": "^0.1.0",
+		"json": "^9.0.6",
+		"sha": "^3.0.0",
+		"sha3": "^2.0.7",
+		"web3": "^1.2.4",
+		"@polkadot/api": "^0.99.0-beta.5",
+		"@polkadot/util": "^1.8.0-beta.1",
+		"bs58": "^4.0.1"
+	}
 }
