--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -14,6 +14,8 @@ rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0.103", features = ["derive"], optional = true }
 simple-json = { version = '0.1.1', git = "https://github.com/jingleizhang/simple-json.git", default-features = false }
 hex = { version = "0.4.0", default-features = false }
+num-bigint-dig = { version = "0.6.0", default-features = false}
+num-traits = { version = "0.2.4", default-features = false}
 
 # primitives
 authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/ProChain/substrate.git", default-features = false }
@@ -98,6 +100,8 @@ std = [
 	"indices/std",
 	"inherents/std",
 	"membership/std",
+	"num-bigint-dig/std",
+	"num-traits/std",
 	"nicks/std",
 	"node-primitives/std",
 	"offchain-primitives/std",
