--- a/eth-erc20-swap/substrate-deputy/package.json
+++ b/eth-erc20-swap/substrate-deputy/package.json
@@ -8,14 +8,16 @@
     "@polkadot/util": "^1.8.0-beta.1",
     "bs58": "^4.0.1",
     "express": "^4.15.2",
+    "get-json": "^1.0.1",
+    "hex": "^0.1.0",
+    "json": "^9.0.6",
     "log4js": "^5.3.0",
+    "nedb": "^1.8.0",
+    "nedb-promise": "^2.0.1",
     "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "web3": "^1.2.4",
-    "hex": "^0.1.0",
-    "get-json": "^1.0.1",
-    "json": "^9.0.6"
+    "web3": "^1.2.4"
   },
   "scripts": {
     "start": "node index.js"
