--- a/bin/node/cli/Cargo.toml
+++ b/bin/node/cli/Cargo.toml
@@ -36,57 +36,57 @@ serde_json = "1.0.41"
 hex = "0.4.0"
 
 # primitives
-authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
-babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
-grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
-sp-timestamp = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-sp-finality-tracker = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-inherents = { package = "sp-inherents", git = "https://github.com/ProChain/substrate.git" }
-keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git" }
-runtime-io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git" }
-consensus-common = { package = "sp-consensus", git = "https://github.com/ProChain/substrate.git"}
+sp-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
+sp-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
+grandpa-primitives = { version = "2.0.0", package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-inherents = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-keyring = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-consensus = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
 
 # client dependencies
-client-api = { package = "sc-client-api", git = "https://github.com/ProChain/substrate.git" }
-client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
-chain-spec = { package = "sc-chain-spec", git = "https://github.com/ProChain/substrate.git" }
-txpool = { package = "sc-transaction-pool", git = "https://github.com/ProChain/substrate.git" }
-txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/ProChain/substrate.git" }
-network = { package = "sc-network", git = "https://github.com/ProChain/substrate.git" }
-babe = { package = "sc-consensus-babe", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-client-db = { package = "sc-client-db", git = "https://github.com/ProChain/substrate.git", default-features = false }
-offchain = { package = "sc-offchain", git = "https://github.com/ProChain/substrate.git" }
-sc-rpc = { git = "https://github.com/ProChain/substrate.git" }
-sc-basic-authority = { git = "https://github.com/ProChain/substrate.git" }
-sc-service = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-sc-telemetry = { git = "https://github.com/ProChain/substrate.git" }
-authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
+sc-client-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-chain-spec = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-network = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
+grandpa = { version = "2.0.0", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
+sc-client-db = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sc-offchain = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-basic-authority = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-service = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sc-telemetry = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
 
 # frame dependencies
-indices = { package = "pallet-indices", git = "https://github.com/ProChain/substrate.git" }
-timestamp = { package = "pallet-timestamp", git = "https://github.com/ProChain/substrate.git", default-features = false }
-contracts = { package = "pallet-contracts", git = "https://github.com/ProChain/substrate.git" }
-system = { package = "frame-system", git = "https://github.com/ProChain/substrate.git" }
-balances = { package = "pallet-balances", git = "https://github.com/ProChain/substrate.git" }
-transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
-support = { package = "frame-support", git = "https://github.com/ProChain/substrate.git", default-features = false }
-im_online = { package = "pallet-im-online", git = "https://github.com/ProChain/substrate.git", default-features = false }
-sr-authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/ProChain/substrate.git"}
+pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
 
 # node-specific dependencies
-node-runtime = { path = "../runtime" }
-node-rpc = { path = "../rpc" }
-node-primitives = { path = "../primitives" }
-node-executor = { path = "../executor" }
+node-runtime = { version = "2.0.0", path = "../runtime" }
+node-rpc = { version = "2.0.0", path = "../rpc" }
+node-primitives = { version = "2.0.0", path = "../primitives" }
+node-executor = { version = "2.0.0", path = "../executor" }
 
 # CLI-specific dependencies
 tokio = { version = "0.1.22", optional = true }
-sc-cli = { git = "https://github.com/ProChain/substrate.git", optional = true }
-transaction-factory = { path = "../../../test/utils/transaction-factory", optional = true }
+sc-cli = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
 ctrlc = { version = "3.1.3", features = ["termination"], optional = true }
+node-transaction-factory = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
 
 # WASM-specific dependencies
 libp2p = { version = "0.13.0", default-features = false, optional = true }
@@ -100,15 +100,15 @@ kvdb-memorydb = { version = "0.1.1", optional = true }
 rand6 = { package = "rand", version = "0.6", features = ["wasm-bindgen"], optional = true }	# Imported just for the `wasm-bindgen` feature
 
 [dev-dependencies]
-keystore = { package = "sc-keystore", git = "https://github.com/ProChain/substrate.git" }
-babe = { package = "sc-consensus-babe", git = "https://github.com/ProChain/substrate.git", features = ["test-helpers"] }
-service-test = { package = "sc-service-test", git = "https://github.com/ProChain/substrate.git" }
+sc-keystore = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus-babe = { version = "0.8", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git" }
+sc-service-test = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 futures = "0.3.1"
 tempfile = "3.1.0"
 
 [build-dependencies]
-sc-cli = { package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
-build-script-utils = { package = "substrate-build-script-utils", path = "../../../utils/build-script-utils" }
+sc-cli = { version = "2.0.0", package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
+build-script-utils = { version = "2.0.0", package = "substrate-build-script-utils", path = "../../../utils/build-script-utils" }
 structopt = "0.3.3"
 vergen = "3.0.4"
 
@@ -128,7 +128,7 @@ browser = [
 ]
 cli = [
 	"sc-cli",
-	"transaction-factory",
+	"node-transaction-factory",
 	"tokio",
 	"ctrlc",
 	"sc-service/rocksdb",
