--- a/bin/node/executor/Cargo.toml
+++ b/bin/node/executor/Cargo.toml
@@ -8,28 +8,28 @@ edition = "2018"
 [dependencies]
 trie-root = "0.15.2"
 codec = { package = "parity-scale-codec", version = "1.0.0" }
-runtime_io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git" }
-state_machine = { package = "sp-state-machine", git = "https://github.com/ProChain/substrate.git" }
-sc-executor = { git = "https://github.com/ProChain/substrate.git" }
-primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
-trie = { package = "sp-trie", git = "https://github.com/ProChain/substrate.git" }
-node-primitives = { path = "../primitives" }
-node-runtime = { path = "../runtime" }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-state-machine = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-executor = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-trie = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+node-primitives = { version = "2.0.0", path = "../primitives" }
+node-runtime = { version = "2.0.0", path = "../runtime" }
 
 [dev-dependencies]
-node-testing = { path = "../testing" }
-test-client = { package = "substrate-test-client", path = "../../../test/utils/client" }
-sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
-runtime_support = { package = "frame-support", git = "https://github.com/ProChain/substrate.git" }
-balances = { package = "pallet-balances", git = "https://github.com/ProChain/substrate.git" }
-transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
-session = { package = "pallet-session", git = "https://github.com/ProChain/substrate.git" }
-system = { package = "frame-system", git = "https://github.com/ProChain/substrate.git" }
-timestamp = { package = "pallet-timestamp", git = "https://github.com/ProChain/substrate.git" }
-treasury = { package = "pallet-treasury", git = "https://github.com/ProChain/substrate.git" }
-contracts = { package = "pallet-contracts", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { package = "pallet-grandpa", git = "https://github.com/ProChain/substrate.git" }
-indices = { package = "pallet-indices", git = "https://github.com/ProChain/substrate.git" }
+node-testing = { version = "2.0.0", path = "../testing" }
+substrate-test-client = { version = "2.0.0", path = "../../../test-utils/client" }
+sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-session = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-treasury = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-grandpa = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 wabt = "0.9.2"
 criterion = "0.3.0"
 
