--- a/bin/node/primitives/Cargo.toml
+++ b/bin/node/primitives/Cargo.toml
@@ -5,16 +5,16 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git", default-features = false }
-sp-runtime = { git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
-sp-serializer = { git = "https://github.com/ProChain/substrate.git" }
+sp-serializer = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 pretty_assertions = "0.6.1"
 
 [features]
 default = ["std"]
 std = [
-	"primitives/std",
+	"sp-core/std",
 	"sp-runtime/std",
 ]
