--- a/bin/node/rpc/Cargo.toml
+++ b/bin/node/rpc/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
+sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 jsonrpc-core = "14.0.3"
-node-primitives = { path = "../primitives" }
-node-runtime = { path = "../runtime" }
-sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts-rpc = { git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment-rpc = { git = "https://github.com/ProChain/substrate.git" }
-substrate-frame-rpc-system = { path = "../../../utils/frame/rpc/system" }
-txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/ProChain/substrate.git" }
+node-primitives = { version = "2.0.0", path = "../primitives" }
+node-runtime = { version = "2.0.0", path = "../runtime" }
+sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+substrate-frame-rpc-system = { version = "2.0.0", path = "../../../utils/frame/rpc/system" }
+sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
