--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -18,120 +18,117 @@ num-bigint-dig = { version = "0.6.0", default-features = false}
 num-traits = { version = "0.2.4", default-features = false}
 
 # primitives
-authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/ProChain/substrate.git", default-features = false }
-babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/ProChain/substrate.git", default-features = false }
-block-builder-api = { package = "sp-block-builder", git = "https://github.com/ProChain/substrate.git", default-features = false}
-inherents = { package = "sp-inherents", git = "https://github.com/ProChain/substrate.git", default-features = false }
-node-primitives = { path = "../primitives", default-features = false }
-offchain-primitives = { package = "sp-offchain", git = "https://github.com/ProChain/substrate.git", default-features = false }
-primitives = { package = "sp-core",  git = "https://github.com/ProChain/substrate.git", default-features = false }
-rstd = { package = "sp-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
-sp-api = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-sp-runtime = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-sp-staking = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-sp-keyring = { git = "https://github.com/ProChain/substrate.git", optional = true }
-sp-session = { git = "https://github.com/ProChain/substrate.git", default-features = false }
-sp-transaction-pool = { package = "sp-transaction-pool-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
-version = { package = "sp-version", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-consensus-babe = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-block-builder = { git = "https://github.com/ProChain/substrate.git", default-features = false}
+sp-inherents = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+node-primitives = { version = "2.0.0", path = "../primitives", default-features = false }
+sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-staking = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-keyring = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
+sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git", default-features = false }
 
 # frame dependencies
-authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/ProChain/substrate.git", default-features = false }
-authorship = { package = "pallet-authorship", git = "https://github.com/ProChain/substrate.git", default-features = false }
-babe = { package = "pallet-babe", git = "https://github.com/ProChain/substrate.git", default-features = false }
-balances = { package = "pallet-balances", git = "https://github.com/ProChain/substrate.git", default-features = false }
-collective = { package = "pallet-collective", git = "https://github.com/ProChain/substrate.git", default-features = false }
-contracts = { package = "pallet-contracts", git = "https://github.com/ProChain/substrate.git", default-features = false }
-contracts-rpc-runtime-api = { package = "pallet-contracts-rpc-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
-democracy = { package = "pallet-democracy", git = "https://github.com/ProChain/substrate.git", default-features = false }
-elections-phragmen = { package = "pallet-elections-phragmen", git = "https://github.com/ProChain/substrate.git", default-features = false }
-executive = { package = "frame-executive", git = "https://github.com/ProChain/substrate.git", default-features = false }
-finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/ProChain/substrate.git", default-features = false }
-grandpa = { package = "pallet-grandpa", git = "https://github.com/ProChain/substrate.git", default-features = false }
-im-online = { package = "pallet-im-online", git = "https://github.com/ProChain/substrate.git", default-features = false }
-indices = { package = "pallet-indices", git = "https://github.com/ProChain/substrate.git", default-features = false }
-membership = { package = "pallet-membership", git = "https://github.com/ProChain/substrate.git", default-features = false }
-nicks = { package = "pallet-nicks", git = "https://github.com/ProChain/substrate.git", default-features = false }
-offences = { package = "pallet-offences", git = "https://github.com/ProChain/substrate.git", default-features = false }
-randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/ProChain/substrate.git", default-features = false }
-session = { package = "pallet-session", git = "https://github.com/ProChain/substrate.git", default-features = false, features = ["historical"] }
-staking = { package = "pallet-staking", git = "https://github.com/ProChain/substrate.git", default-features = false, features = ["migrate"] }
-pallet-staking-reward-curve = { git = "https://github.com/ProChain/substrate.git"}
-sudo = { package = "pallet-sudo", git = "https://github.com/ProChain/substrate.git", default-features = false }
-support = { package = "frame-support", git = "https://github.com/ProChain/substrate.git", default-features = false }
-system = { package = "frame-system", git = "https://github.com/ProChain/substrate.git", default-features = false }
-system-rpc-runtime-api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
-timestamp = { package = "pallet-timestamp", git = "https://github.com/ProChain/substrate.git", default-features = false }
-treasury = { package = "pallet-treasury", git = "https://github.com/ProChain/substrate.git", default-features = false }
-utility = { package = "frame-utility", git = "https://github.com/ProChain/substrate.git", default-features = false }
-transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/ProChain/substrate.git", default-features = false }
-transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
-runtime-io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git", default-features = false }
+pallet-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-authorship = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-babe = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-collective = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-democracy = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-elections-phragmen = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-grandpa = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-membership = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-nicks = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-offences = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-randomness-collective-flip = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-session = { version = "2.0.0", features = ["historical"], git = "https://github.com/ProChain/substrate.git", default-features = false }
+pallet-staking = { version = "2.0.0", features = ["migrate"], git = "https://github.com/ProChain/substrate.git", default-features = false }
+pallet-staking-reward-curve = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
+pallet-sudo = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-treasury = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-utility = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 
 # inner dependencies
 did = { path = "../modules/did", default-features = false }
 ads = { path = "../modules/ads", default-features = false }
 
 [build-dependencies]
-wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }
+wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
-
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 
 [features]
 default = ["std"]
 std = [
-	"authority-discovery-primitives/std",
-	"authority-discovery/std",
-	"authorship/std",
-	"babe-primitives/std",
-	"babe/std",
-	"balances/std",
-	"block-builder-api/std",
+	"sp-authority-discovery/std",
+	"pallet-authority-discovery/std",
+	"pallet-authorship/std",
+	"sp-consensus-babe/std",
+	"pallet-babe/std",
+	"pallet-balances/std",
+	"sp-block-builder/std",
 	"codec/std",
-	"collective/std",
-	"contracts-rpc-runtime-api/std",
-	"contracts/std",
-	"democracy/std",
-	"elections-phragmen/std",
-	"executive/std",
-	"finality-tracker/std",
-	"grandpa/std",
-	"im-online/std",
-	"indices/std",
-	"inherents/std",
-	"membership/std",
-	"num-bigint-dig/std",
-	"num-traits/std",
-	"nicks/std",
+	"pallet-collective/std",
+	"pallet-contracts-rpc-runtime-api/std",
+	"pallet-contracts/std",
+	"pallet-democracy/std",
+	"pallet-elections-phragmen/std",
+	"frame-executive/std",
+	"pallet-finality-tracker/std",
+	"pallet-grandpa/std",
+	"pallet-im-online/std",
+	"pallet-indices/std",
+	"sp-inherents/std",
+	"pallet-membership/std",
+	"pallet-nicks/std",
 	"node-primitives/std",
-	"offchain-primitives/std",
-	"offences/std",
-	"primitives/std",
-	"randomness-collective-flip/std",
-	"rstd/std",
+	"sp-offchain/std",
+	"pallet-offences/std",
+	"sp-core/std",
+	"pallet-randomness-collective-flip/std",
+	"sp-std/std",
 	"rustc-hex",
-	'runtime-io/std',
 	"safe-mix/std",
 	"serde/std",
-	"session/std",
+	"pallet-session/std",
 	"simple-json/std",
 	"sp-api/std",
 	"sp-runtime/std",
 	"sp-staking/std",
-	"staking/std",
+	"pallet-staking/std",
 	"sp-keyring",
 	"sp-session/std",
-	"sudo/std",
-	"support/std",
-	"system-rpc-runtime-api/std",
-	"system/std",
-	"timestamp/std",
-	"transaction-payment-rpc-runtime-api/std",
-	"transaction-payment/std",
-	"treasury/std",
+	"pallet-sudo/std",
+	"frame-support/std",
+	"frame-system-rpc-runtime-api/std",
+	"frame-system/std",
+	"pallet-timestamp/std",
+	"pallet-transaction-payment-rpc-runtime-api/std",
+	"pallet-transaction-payment/std",
+	"pallet-treasury/std",
 	"sp-transaction-pool/std",
-	"utility/std",
-	"version/std",
+	"pallet-utility/std",
+	"sp-version/std",
 	"did/std",
 	"ads/std",
 ]
