--- a/bin/node/testing/Cargo.toml
+++ b/bin/node/testing/Cargo.toml
@@ -6,27 +6,27 @@ description = "Test utilities for Substrate node."
 edition = "2018"
 
 [dependencies]
-balances = { package = "pallet-balances", git = "https://github.com/ProChain/substrate.git" }
-client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 codec = { package = "parity-scale-codec", version = "1.0.0" }
-contracts = { package = "pallet-contracts", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { package = "pallet-grandpa", git = "https://github.com/ProChain/substrate.git" }
-indices = { package = "pallet-indices", git = "https://github.com/ProChain/substrate.git" }
-keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git" }
-node-executor = { path = "../executor" }
-node-primitives = { path = "../primitives" }
-node-runtime = { path = "../runtime" }
-primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
-runtime-io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git" }
-runtime_support = { package = "frame-support", git = "https://github.com/ProChain/substrate.git" }
-session = { package = "pallet-session", git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
-staking = { package = "pallet-staking", git = "https://github.com/ProChain/substrate.git" }
-sc-executor = { git = "https://github.com/ProChain/substrate.git" }
-system = { package = "frame-system", git = "https://github.com/ProChain/substrate.git" }
-test-client = { package = "substrate-test-client", path = "../../../test/utils/client" }
-timestamp = { package = "pallet-timestamp", git = "https://github.com/ProChain/substrate.git" }
-transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
-treasury = { package = "pallet-treasury", git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-grandpa = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-keyring = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+node-executor = { version = "2.0.0", path = "../executor" }
+node-primitives = { version = "2.0.0", path = "../primitives" }
+node-runtime = { version = "2.0.0", path = "../runtime" }
+sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-session = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-staking = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-executor = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+substrate-test-client = { version = "2.0.0", path = "../../../test-utils/client" }
+pallet-timestamp = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-treasury = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 wabt = "0.9.2"
 hex-literal = "0.2.1"
