--- a/utils/frame/rpc/support/Cargo.toml
+++ b/utils/frame/rpc/support/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2018"
 futures = { version = "0.3.0", features = ["compat"] }
 jsonrpc-client-transports = "14"
 jsonrpc-core = "14"
-parity-scale-codec = "1"
+codec = { package = "parity-scale-codec", version = "1" }
 serde = "1"
-frame-support = { git = "https://github.com/ProChain/substrate.git" }
-sp-core-storage = { git = "https://github.com/ProChain/substrate.git" }
-sc-rpc-api = { git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-storage = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-rpc-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
-frame-system = { git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 tokio = "0.1"
