--- a/bin/node/cli/Cargo.toml
+++ b/bin/node/cli/Cargo.toml
@@ -31,7 +31,7 @@ hex-literal = "0.2.1"
 jsonrpc-core = "14.0.3"
 log = "0.4.8"
 rand = "0.7.2"
-structopt = "0.3.3"
+structopt = "0.3.7"
 serde_json = "1.0.41"
 hex = "0.4.0"
 
@@ -50,20 +50,20 @@ sp-consensus = { version = "0.8", git = "https://github.com/ProChain/substrate.g
 
 # client dependencies
 sc-client-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-client = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
 sc-chain-spec = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 sc-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 sc-network = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
 sc-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { version = "2.0.0", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-sc-client-db = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+grandpa = { version = "0.8", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
+sc-client-db = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 sc-offchain = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 sc-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-basic-authority = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-service = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sc-basic-authority = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
+sc-service = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 sc-telemetry = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
+sc-authority-discovery = { version = "0.8",  git = "https://github.com/ProChain/substrate.git" }
 
 # frame dependencies
 pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
@@ -83,21 +83,15 @@ node-primitives = { version = "2.0.0", path = "../primitives" }
 node-executor = { version = "2.0.0", path = "../executor" }
 
 # CLI-specific dependencies
-tokio = { version = "0.1.22", optional = true }
-sc-cli = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
+tokio = { version = "0.2", features = ["rt-threaded"], optional = true }
+sc-cli = { version = "0.8.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
 ctrlc = { version = "3.1.3", features = ["termination"], optional = true }
-node-transaction-factory = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
+node-transaction-factory = { version = "0.8.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
 
 # WASM-specific dependencies
-libp2p = { version = "0.13.0", default-features = false, optional = true }
-clear_on_drop = { version = "0.2.3", features = ["no_cc"], optional = true }	# Imported just for the `no_cc` feature
-console_error_panic_hook = { version = "0.1.1", optional = true }
-console_log = { version = "0.1.2", optional = true }
-js-sys = { version = "0.3.22", optional = true }
-wasm-bindgen = { version = "0.2.45", optional = true }
-wasm-bindgen-futures = { version = "0.3.22", optional = true }
-kvdb-memorydb = { version = "0.1.1", optional = true }
-rand6 = { package = "rand", version = "0.6", features = ["wasm-bindgen"], optional = true }	# Imported just for the `wasm-bindgen` feature
+wasm-bindgen = { version = "0.2.57", optional = true }
+wasm-bindgen-futures = { version = "0.4.7", optional = true }
+browser-utils = { path = "../../../utils/browser", optional = true }
 
 [dev-dependencies]
 sc-keystore = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
@@ -107,24 +101,17 @@ futures = "0.3.1"
 tempfile = "3.1.0"
 
 [build-dependencies]
-sc-cli = { version = "2.0.0", package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
+sc-cli = { version = "0.8.0", package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
 build-script-utils = { version = "2.0.0", package = "substrate-build-script-utils", path = "../../../utils/build-script-utils" }
-structopt = "0.3.3"
+structopt = "0.3.7"
 vergen = "3.0.4"
 
 [features]
-default = ["cli"]
+default = ["cli", "wasmtime"]
 browser = [
-	"clear_on_drop",
-	"console_error_panic_hook",
-	"console_log",
-	"js-sys",
-	"libp2p",
+	"browser-utils",
 	"wasm-bindgen",
 	"wasm-bindgen-futures",
-	"kvdb-memorydb",
-	"rand/wasm-bindgen",
-	"rand6"
 ]
 cli = [
 	"sc-cli",
