--- a/bin/node/executor/Cargo.toml
+++ b/bin/node/executor/Cargo.toml
@@ -6,32 +6,34 @@ description = "Substrate node implementation in Rust."
 edition = "2018"
 
 [dependencies]
-trie-root = "0.15.2"
 codec = { package = "parity-scale-codec", version = "1.0.0" }
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-state-machine = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-executor = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-trie = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 node-primitives = { version = "2.0.0", path = "../primitives" }
 node-runtime = { version = "2.0.0", path = "../runtime" }
+sc-executor = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-state-machine = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
+sp-trie = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+trie-root = "0.15.2"
 
 [dev-dependencies]
-node-testing = { version = "2.0.0", path = "../testing" }
-substrate-test-client = { version = "2.0.0", path = "../../../test-utils/client" }
-sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+criterion = "0.3.0"
 frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-session = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-timestamp = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-treasury = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+node-testing = { version = "2.0.0", path = "../testing" }
+pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 pallet-grandpa = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-im-online = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-session = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+pallet-treasury = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-application-crypto = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+substrate-test-client = { version = "2.0.0", path = "../../../test-utils/client" }
 wabt = "0.9.2"
-criterion = "0.3.0"
 
 [features]
 wasmtime = [
