--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -39,7 +39,7 @@ sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git", 
 frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, path = "../../../frame/system/rpc/runtime-api/" }
+frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 pallet-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 pallet-authorship = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 pallet-babe = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
