--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ stages:
 
 variables:
   GIT_STRATEGY:                    fetch
+  GIT_DEPTH:                       100
   CARGO_HOME:                      "/ci-cache/${CI_PROJECT_NAME}/cargo/${CI_JOB_NAME}"
   SCCACHE_DIR:                     "/ci-cache/${CI_PROJECT_NAME}/sccache"
   CARGO_INCREMENTAL:               0
@@ -55,6 +56,8 @@ variables:
       - runner_system_failure
       - unknown_failure
       - api_failure
+  dependencies:                    []
+  interruptible:                   true
   tags:
     - linux-docker
 
@@ -79,6 +82,7 @@ check-runtime:
     GITHUB_API_PROJECT:            "parity%2Finfrastructure%2Fgithub-api"
   script:
     - ./.maintain/gitlab/check_runtime.sh
+  interruptible:                   true
   allow_failure:                   true
 
 
@@ -90,6 +94,7 @@ check-line-width:
     - /^[0-9]+$/
   script:
     - ./.maintain/gitlab/check_line_width.sh
+  interruptible:                   true
   allow_failure:                   true
 
 
@@ -117,7 +122,7 @@ cargo-check-subkey:
   except:
     - /^v[0-9]+\.[0-9]+.*$/        # i.e. v1.0, v2.1rc1
   script:
-    - cd ./bin/subkey
+    - cd ./bin/utils/subkey
     - BUILD_DUMMY_WASM_BINARY=1 time cargo check --release
     - sccache -s
 
@@ -134,7 +139,7 @@ test-linux-stable:                 &test-linux
       - $DEPLOY_TAG
   script:
     - WASM_BUILD_NO_COLOR=1 time cargo test --all --release --verbose --locked |
-        tee output.log
+      tee output.log
     - sccache -s
   after_script:
     - echo "___Collecting warnings for check_warnings job___"
@@ -145,17 +150,16 @@ test-linux-stable:                 &test-linux
     paths:
       - ${CI_COMMIT_SHORT_SHA}_warnings.log
 
-test-dependency-rules:             &test-linux
+test-dependency-rules:
   stage:                           test
   <<:                              *docker-env
-  allow_failure:                   true
   except:
     variables:
       - $DEPLOY_TAG
   script:
     - .maintain/ensure-deps.sh
 
-test-frame-staking:                 &test-frame-staking
+test-frame-staking:
   stage:                           test
   <<:                              *docker-env
   variables:
@@ -171,7 +175,7 @@ test-frame-staking:                 &test-frame-staking
     - WASM_BUILD_NO_COLOR=1 time cargo test --release --verbose --no-default-features --features std
     - sccache -s
 
-test-wasmtime:                 &test-wasmtime
+test-wasmtime:
   stage:                           test
   <<:                              *docker-env
   variables:
@@ -198,8 +202,8 @@ test-linux-stable-int:
     - echo "___Logs will be partly shown at the end in case of failure.___"
     - echo "___Full log will be saved to the job artifacts only in case of failure.___"
     - WASM_BUILD_NO_COLOR=1 RUST_LOG=sync=trace,consensus=trace,client=trace,state-db=trace,db=trace,forks=trace,state_db=trace,storage_cache=trace
-        time cargo test -p node-cli --release --verbose --locked -- --ignored --test-threads=1
-        &> ${CI_COMMIT_SHORT_SHA}_int_failure.log
+      time cargo test -p node-cli --release --verbose --locked -- --ignored
+      &> ${CI_COMMIT_SHORT_SHA}_int_failure.log
     - sccache -s
   after_script:
     - awk '/FAILED|^error\[/,0' ${CI_COMMIT_SHORT_SHA}_int_failure.log
@@ -240,7 +244,7 @@ node-exits:
     - ./.maintain/check_for_exit.sh
 
 
-test-full-crypto-feature:          &test-full-crypto-feature
+test-full-crypto-feature:
   stage:                           test
   <<:                              *docker-env
   variables:
@@ -261,25 +265,26 @@ test-full-crypto-feature:          &test-full-crypto-feature
 
 #### stage:                        build
 
-build-linux-substrate:
+build-linux-substrate:             &build-binary
   stage:                           build
   <<:                              *collect-artifacts
   <<:                              *docker-env
   <<:                              *build-only
+  before_script:
+    - mkdir -p ./artifacts/substrate/
   except:
     variables:
       - $DEPLOY_TAG
   script:
     - WASM_BUILD_NO_COLOR=1 time cargo build --release --verbose
-    - mkdir -p ./artifacts/substrate/
     - mv ./target/release/substrate ./artifacts/substrate/.
     - echo -n "Substrate version = "
     - if [ "${CI_COMMIT_TAG}" ]; then
-        echo "${CI_COMMIT_TAG}" | tee ./artifacts/substrate/VERSION;
+      echo "${CI_COMMIT_TAG}" | tee ./artifacts/substrate/VERSION;
       else
-        ./artifacts/substrate/substrate --version |
-          sed -n -r 's/^substrate ([0-9.]+.*-[0-9a-f]{7,13})-.*$/\1/p' |
-          tee ./artifacts/substrate/VERSION;
+      ./artifacts/substrate/substrate --version |
+      sed -n -r 's/^substrate ([0-9.]+.*-[0-9a-f]{7,13})-.*$/\1/p' |
+      tee ./artifacts/substrate/VERSION;
       fi
     - sha256sum ./artifacts/substrate/substrate | tee ./artifacts/substrate/substrate.sha256
     - printf '\n# building node-template\n\n'
@@ -288,24 +293,18 @@ build-linux-substrate:
     - sccache -s
 
 build-linux-subkey:
-  stage:                           build
-  <<:                              *collect-artifacts
-  <<:                              *docker-env
-  <<:                              *build-only
-  except:
-    variables:
-      - $DEPLOY_TAG
+  <<:                              *build-binary
+  before_script:
+    - mkdir -p ./artifacts/subkey
   script:
-    - cd ./bin/subkey
+    - cd ./bin/utils/subkey
     - BUILD_DUMMY_WASM_BINARY=1 time cargo build --release --verbose
     - cd -
-    - sccache -s
-    - mkdir -p ./artifacts/subkey
     - mv ./target/release/subkey ./artifacts/subkey/.
     - echo -n "Subkey version = "
     - ./artifacts/subkey/subkey --version |
-        sed -n -r 's/^subkey ([0-9.]+.*)/\1/p' |
-          tee ./artifacts/subkey/VERSION;
+      sed -n -r 's/^subkey ([0-9.]+.*)/\1/p' |
+      tee ./artifacts/subkey/VERSION;
     - sha256sum ./artifacts/subkey/subkey | tee ./artifacts/subkey/subkey.sha256
     - cp -r .maintain/docker/subkey.Dockerfile ./artifacts/subkey/
     - sccache -s
@@ -319,13 +318,13 @@ build-rust-doc-release:
     when:                          on_success
     expire_in:                     7 days
     paths:
-    - ./crate-docs
+      - ./crate-docs
   <<:                              *build-only
   script:
     - rm -f ./crate-docs/index.html # use it as an indicator if the job succeeds
     - BUILD_DUMMY_WASM_BINARY=1 RUSTDOCFLAGS="--html-in-header $(pwd)/.maintain/rustdoc-header.html" time cargo +nightly doc --release --all --verbose
     - cp -R ./target/doc ./crate-docs
-    - echo "<meta http-equiv=refresh content=0;url=substrate_service/index.html>" > ./crate-docs/index.html
+    - echo "<meta http-equiv=refresh content=0;url=sc_service/index.html>" > ./crate-docs/index.html
     - sccache -s
 
 check_warnings:
@@ -340,41 +339,48 @@ check_warnings:
     - test-linux-stable
   script:
     - if [ -s ${CI_COMMIT_SHORT_SHA}_warnings.log ]; then
-        cat ${CI_COMMIT_SHORT_SHA}_warnings.log;
-        exit 1;
+      cat ${CI_COMMIT_SHORT_SHA}_warnings.log;
+      exit 1;
       else
-        echo "___No warnings___";
+      echo "___No warnings___";
       fi
   allow_failure:                   true
 
-# Check whether Polkadot 'master' branch builds using this Substrate commit.
+# Nightly check whether Polkadot 'master' branch builds.
 check_polkadot:
   stage:                           build
   <<:                              *docker-env
   allow_failure:                   true
-  dependencies:
-    - test-linux-stable
+  only:
+    - master
+    - schedules
   script:
-    - COMMIT_HASH=$(git rev-parse HEAD)
     - SUBSTRATE_PATH=$(pwd)
     # Clone the current Polkadot master branch into ./polkadot.
     - git clone --depth 1 https://gitlab.parity.io/parity/polkadot.git
     - cd polkadot
-    # Within Polkadot 'master' alter each Cargo.toml that references the
-    # Substrate 'polkadot-master' branch:
-    # 1. Replace the 'branch = "polkadot-master"' statements with the rev of our
-    #    commit.
-    # 2. Replace 'git = "https://.*"' with 'git = "file://.*"' (the local
-    #    checked out Substrate repository one folder above).
-    # 3. Remove any trailing commas.
-    - git grep -l "polkadot-master" | grep toml | xargs sed -i "s/branch.*=.*\"polkadot-master\"/rev = \"$COMMIT_HASH\"/; s~https://github.com/paritytech/substrate~file://$SUBSTRATE_PATH~; s/,\s*}/ }/"
-    # Make sure 'Cargo.lock' matches 'Cargo.toml'. It's enough to update one
+    # Make sure we override the crates in native and wasm build
+    - mkdir .cargo
+    - echo "paths = [ \"$SUBSTRATE_PATH\" ]" > .cargo/config
+    - mkdir -p target/debug/wbuild/.cargo
+    - echo "paths = [ \"$SUBSTRATE_PATH\" ]" > target/debug/wbuild/.cargo/config
     # package, others are updated along the way.
-    - cargo update -p sp-io
+    - cargo update
     # Check whether Polkadot 'master' branch builds with this Substrate commit.
     - time cargo check
     - cd -
     - sccache -s
+
+trigger-contracts-ci:
+  stage:                           publish
+  needs:
+    - build-linux-substrate
+  trigger:
+    project:                       parity/srml-contracts-waterfall
+    branch:                        "master"
+  only:
+    - master
+    - schedules
 
 #### stage:                        publish
 
@@ -386,7 +392,7 @@ check_polkadot:
     - docker:dind
   before_script:
     - test "$Docker_Hub_User_Parity" -a "$Docker_Hub_Pass_Parity"
-        || ( echo "no docker credentials provided"; exit 1 )
+      || ( echo "no docker credentials provided"; exit 1 )
     - docker login -u "$Docker_Hub_User_Parity" -p "$Docker_Hub_Pass_Parity"
     - docker info
   script:
@@ -455,7 +461,7 @@ publish-s3-release:
     - aws s3 sync s3://${BUCKET}/${PREFIX}/$(cat ./artifacts/substrate/VERSION)/ s3://${BUCKET}/${PREFIX}/latest/
   after_script:
     - aws s3 ls s3://${BUCKET}/${PREFIX}/latest/
-        --recursive --human-readable --summarize
+      --recursive --human-readable --summarize
 
 
 publish-s3-doc:
@@ -473,14 +479,14 @@ publish-s3-doc:
     PREFIX:                        "substrate-rustdoc"
   script:
     - test -r ./crate-docs/index.html || (
-        echo "./crate-docs/index.html not present, build:rust:doc:release job not complete";
-        exit 1
+      echo "./crate-docs/index.html not present, build:rust:doc:release job not complete";
+      exit 1
       )
     - aws s3 sync --delete --size-only --only-show-errors
-        ./crate-docs/ s3://${BUCKET}/${PREFIX}/
+      ./crate-docs/ s3://${BUCKET}/${PREFIX}/
   after_script:
     - aws s3 ls s3://${BUCKET}/${PREFIX}/
-        --human-readable --summarize
+      --human-readable --summarize
 
 
 publish-gh-doc:
@@ -497,12 +503,12 @@ publish-gh-doc:
     GITHUB_API:                    "https://api.github.com"
   script:
     - test -r ./crate-docs/index.html || (
-        echo "./crate-docs/index.html not present, build:rust:doc:release job not complete";
-        exit 1
+      echo "./crate-docs/index.html not present, build:rust:doc:release job not complete";
+      exit 1
       )
     - test "${GITHUB_USER}" -a "${GITHUB_EMAIL}" -a "${GITHUB_TOKEN}" || (
-        echo "environment variables for github insufficient";
-        exit 1
+      echo "environment variables for github insufficient";
+      exit 1
       )
     - |
       cat > ${HOME}/.gitconfig <<EOC
@@ -535,8 +541,8 @@ publish-gh-doc:
     - kubernetes-parity-build
   before_script:
     - test -z "${DEPLOY_TAG}" &&
-        test -f ./artifacts/substrate/VERSION &&
-        DEPLOY_TAG="$(cat ./artifacts/substrate/VERSION)"
+      test -f ./artifacts/substrate/VERSION &&
+      DEPLOY_TAG="$(cat ./artifacts/substrate/VERSION)"
     - test "${DEPLOY_TAG}" || ( echo "Neither DEPLOY_TAG nor VERSION information available"; exit 1 )
   script:
     - echo "Substrate version = ${DEPLOY_TAG}"
