--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -36,45 +36,45 @@ serde_json = "1.0.41"
 hex = "0.4.0"
 
 # primitives
-sp-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
-sp-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
-grandpa-primitives = { version = "2.0.0", package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-inherents = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-keyring = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-consensus = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
+sp-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+grandpa-primitives = { version = "2.0.0", package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-inherents = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-keyring = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-consensus = { version = "0.8", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 
 # client dependencies
-sc-client-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-client = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
-sc-chain-spec = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-network = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
-sc-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { version = "0.8", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-sc-client-db = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sc-offchain = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-basic-authority = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
-sc-service = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sc-telemetry = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-authority-discovery = { version = "0.8",  git = "https://github.com/ProChain/substrate.git" }
+sc-client-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-chain-spec = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-network = { version = "0.8", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+grandpa = { version = "2.0.0", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-client-db = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-offchain = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-basic-authority = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-service = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-telemetry = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 
 # frame dependencies
-pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 
 # node-specific dependencies
 node-runtime = { version = "2.0.0", path = "../runtime" }
@@ -83,26 +83,26 @@ node-primitives = { version = "2.0.0", path = "../primitives" }
 node-executor = { version = "2.0.0", path = "../executor" }
 
 # CLI-specific dependencies
-tokio = { version = "0.2", features = ["rt-threaded"], optional = true }
-sc-cli = { version = "0.8.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
+tokio = { version = "0.1.22", optional = true }
+sc-cli = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 ctrlc = { version = "3.1.3", features = ["termination"], optional = true }
-node-transaction-factory = { version = "0.8.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
+node-transaction-factory = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 
 # WASM-specific dependencies
 wasm-bindgen = { version = "0.2.57", optional = true }
 wasm-bindgen-futures = { version = "0.4.7", optional = true }
-browser-utils = { git = "https://github.com/ProChain/substrate.git", optional = true }
+browser-utils = { git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", optional = true }
 
 [dev-dependencies]
-sc-keystore = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sc-consensus-babe = { version = "0.8", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git" }
-sc-service-test = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-keystore = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-consensus-babe = { version = "0.8", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-service-test = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 futures = "0.3.1"
 tempfile = "3.1.0"
 
 [build-dependencies]
-sc-cli = { version = "0.8.0", package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
-build-script-utils = { version = "2.0.0", package = "substrate-build-script-utils", git = "https://github.com/ProChain/substrate.git" }
+sc-cli = { version = "2.0.0", package = "sc-cli", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+build-script-utils = { version = "2.0.0", package = "substrate-build-script-utils", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 structopt = "=0.3.7"
 vergen = "3.0.4"
 
