--- a/node/modules/utilities/Cargo.toml
+++ b/node/modules/utilities/Cargo.toml
@@ -12,14 +12,14 @@ serde = { version = "1.0.102", optional = true }
 
 # primitives
 node-primitives = { version = "2.0.0", path = "../../primitives", default-features = false }
-sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git", default-features = false }
-rstd = { package = "sp-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
-sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",default-features = false }
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
+rstd = { package = "sp-std", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
+sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2",default-features = false }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
 
 # frame dependencies
-frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git", default-features = false }
-frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git", default-features = false }
+frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
+frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
 
 [dev-dependencies]
 
