--- a/node/primitives/Cargo.toml
+++ b/node/primitives/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 
 [dev-dependencies]
-sp-serializer = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-serializer = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 pretty_assertions = "0.6.1"
 
 [features]
