--- a/node/rpc/Cargo.toml
+++ b/node/rpc/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-sc-client = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
+sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 jsonrpc-core = "14.0.3"
 node-primitives = { version = "2.0.0", path = "../primitives" }
 node-runtime = { version = "2.0.0", path = "../runtime" }
-sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts-rpc = { version = "0.8.0", git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-substrate-frame-rpc-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
-sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-contracts-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-transaction-payment-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+substrate-frame-rpc-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
