--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -18,56 +18,54 @@ num-bigint-dig = { version = "0.6.0", default-features = false}
 num-traits = { version = "0.2.4", default-features = false}
 
 # primitives
-sp-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-consensus-babe = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-block-builder = { git = "https://github.com/ProChain/substrate.git", default-features = false}
-sp-inherents = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-consensus-babe = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-block-builder = { git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false}
+sp-inherents = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 node-primitives = { version = "2.0.0", path = "../primitives", default-features = false }
-sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-staking = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-keyring = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
-sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-staking = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-keyring = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
 
 # frame dependencies
-frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-authorship = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-babe = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-collective = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts-rpc-runtime-api = { version = "0.8.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-democracy = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-elections-phragmen = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-grandpa = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-indices = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-identity = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-membership = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-offences = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-randomness-collective-flip = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-recovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-session = { version = "2.0.0", features = ["historical"], git = "https://github.com/ProChain/substrate.git", default-features = false }
-pallet-staking = { version = "2.0.0", features = ["migrate"], git = "https://github.com/ProChain/substrate.git", default-features = false }
-pallet-staking-reward-curve = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
-pallet-sudo = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-society = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-treasury = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-utility = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-authorship = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-babe = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-collective = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-contracts = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-contracts-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-democracy = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-elections-phragmen = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-grandpa = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-indices = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-identity = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-membership = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-offences = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-randomness-collective-flip = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-session = { version = "2.0.0", features = ["historical"], git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
+pallet-staking = { version = "2.0.0", features = ["migrate"], git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
+pallet-staking-reward-curve = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-sudo = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-treasury = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-utility = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-transaction-payment = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 
 # inner dependencies
 did = { path = "../modules/did", default-features = false }
@@ -76,10 +74,10 @@ prices = { path = "../modules/prices", default-features = false }
 utilities = { path = "../modules/utilities", default-features = false }
 
 [build-dependencies]
-wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }
+wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 
 [dev-dependencies]
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
 
 [features]
 default = ["std"]
@@ -133,8 +131,6 @@ std = [
 	"sp-transaction-pool/std",
 	"pallet-utility/std",
 	"sp-version/std",
-	"pallet-society/std",
-    "pallet-recovery/std",
 	"did/std",
 	"ads/std",
 	"prices/std",
