update erc20 swap

--- a/ethereum/erc20-htlc-swap/package.json
+++ b/ethereum/erc20-htlc-swap/package.json
@@ -19,6 +19,7 @@
     "fastclick": "^1.0.6",
     "moment": "^2.24.0",
     "px2rem-loader": "^0.1.9",
+    "truffle-wallet-provider": "0.0.5",
     "vee-validate": "^3.2.1",
     "vue-i18n": "^8.15.3",
     "vue-socket.io": "^3.0.7",
