--- a/ethereum/erc20-htlc-swap/.env.development
+++ b/ethereum/erc20-htlc-swap/.env.development
@@ -3,3 +3,4 @@ VUE_APP_SIGN_HOST=http://localhost:8091
 VUE_APP_SIGN_HOST_WSS=ws://localhost:8091
 VUE_APP_HOST=http://localhost:9000
 VUE_APP_TEST_WX=wxid_7h9gf2umzeja22
+VUE_APP_SIGN_HOST=http://123.207.140.69:8091
